<resources>
    <string name="app_name">Popular Movies</string>
    <string name="grid_error" translatable="true">Error Loading GridView</string>
    <string name="calendar_icon_a11y" translatable="true">Released</string>
    <string name="favourite_btn_a11y" translatable="true">Add to favourites</string>
    <string name="trailer_icon_play" translatable="true">Play trailer</string>
    <string name="detail_fragment_back_ic_a11y" translatable="true">Back to movie list</string>

    <string name="details_release_day_title" translatable="true">Release Date:</string>
    <string name="details_vote_average_title" translatable="true">Vote Average:</string>
    <string name="details_vote_average_text" translatable="true">%1$s out of %2$d votes</string>
    <string name="details_plot_title" translatable="true">Plot:</string>

    <string name="btn_trailer_text" translatable="true">Trailers</string>
    <string name="btn_reviews_text" translatable="true">Reviews</string>

    <string name="mi_sort_by_popular" translatable="true">Most Popular</string>
    <string name="mi_sort_by_top_rated" translatable="true">Top Rated</string>
    <string name="mi_sort_popular_condensed" translatable="true">Popular</string>
    <string name="mi_sort_top_rated_condensed" translatable="true">Top</string>
    <string name="mi_sort_favourites" translatable="true">Favourites</string>
    <string name="mi_sort_favourites_condensed" translatable="true">Fav</string>

    <string name="bnav_overview_title" translatable="true">Overview</string>
    <string name="bnav_trailers_title" translatable="true">Trailers</string>
    <string name="bnav_reviews_title" translatable="true">Reviews</string>

    <string name="list_no_network_available" translatable="true">No Network Available!</string>
    <string name="list_no_favourites_added" translatable="true">No Favourites Added!</string>
    <string name="details_no_trailers" translatable="true">No Trailers Available!</string>
    <string name="details_no_reviews" translatable="true">No Reviews Available!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
