<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/mi_popular"
            android:checked="true"
            android:icon="@drawable/ic_grade_black_24dp"
            android:orderInCategory="99"
            android:title="@string/mi_sort_by_popular"
            android:titleCondensed="@string/mi_sort_popular_condensed"
            app:showAsAction="never" />
        <item
            android:id="@+id/mi_top_rated"
            android:icon="@drawable/ic_swap_vert_black_24dp"
            android:orderInCategory="100"
            android:title="@string/mi_sort_by_top_rated"
            android:titleCondensed="@string/mi_sort_top_rated_condensed"
            app:showAsAction="never" />
        <item
            android:id="@+id/mi_favourites"
            android:icon="@drawable/ic_launcher_foreground"
            android:orderInCategory="101"
            android:title="@string/mi_sort_favourites"
            android:titleCondensed="@string/mi_sort_favourites_condensed"
            app:showAsAction="never" />
    </group>
</menu>